--- a/css/contact.css
+++ b/css/contact.css
@@ -57,3 +57,8 @@ button {
     cursor: pointer;
     transition: 0.2s;
 }
+
+button:hover {
+    background: rgb(8, 70, 131);
+    box-shadow: 2px 2px 15px rgb(8, 70, 131);
+}
